tests/errors/sem.expected-bool.branch-condition.or
main :: () -> void {
    if 1 then true;
};
